--- a/modules/seminar/templates/solutions.tex
+++ b/modules/seminar/templates/solutions.tex
@@ -6,8 +6,8 @@
 (@ block heading_inner @)
     (@ if problem.solution @)%
         vzorák (* problem.solution|format_people(func=textbf) *)%
-    (@ endif @)%
-    (@ if problem.evaluation @)%
+    (@- endif -@)%
+    (@- if problem.evaluation -@)%
         , opravoval(* problem.evaluation|format_gender_suffix *) (* problem.evaluation|format_people(func=textbf) *)%
     (@ endif @)%
 (@ endblock heading_inner @)
