--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -53,10 +53,12 @@
     \titleformat{\subsection}[hang]{\large}{\bfseries\arabic{round}.\arabic{problem}}{6pt}{}[]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
     \titleformat{\paragraph}[hang]{\it\bfseries}{}{0pt}{}[]
+    \titleformat{\subparagraph}[hang]{\it}{}{0pt}{}[]
     \titlespacing{\section}{0pt}{8pt}{8pt}
     \titlespacing{\subsection}{0pt}{8pt}{0pt}
     \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
     \titlespacing{\paragraph}{0pt}{8pt}{0pt}
+    \titlespacing{\subparagraph}{0pt}{6pt}{0pt}
 }
 
 \fancypagestyle{seminar-booklet-body}{
