Minor fixes in TeX templates

--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -3,7 +3,7 @@
 % package siunitx -- custom units
 
 \NewDocumentCommand{\errorMessage}{+m}{\colorbox{red}{#1}}
-\NewDocumentCommand{\todoMessage}{+m}{\colorbox{cyan}{#1}}
+\NewDocumentCommand{\todoMessage}{+m}{\colorbox{orange}{ToDo: #1}}
 
 % Protected input -- \input entire file or typeset a warning message saying that it does not exist
 \NewDocumentCommand{\protectedInput}{m}{%
