Náboj in situ fixes

--- a/core/i18n/sk/override.tex
+++ b/core/i18n/sk/override.tex
@@ -1,5 +1,5 @@
 \sisetup{
     output-decimal-marker   = {,},
-    list-final-separator    = {\ a\ },
-    list-pair-separator     = {\ a\ },
+    list-final-separator    = {\text{ a }},
+    list-pair-separator     = {\text{ a }},
 }
