--- a/modules/naboj/templates/constants.tex
+++ b/modules/naboj/templates/constants.tex
@@ -28,7 +28,7 @@
                                 <no symbol defined>
                             (@ endif @) &
                             (@ if 'value' in constant and 'symbol' in constant @)
-                                \SI{(* constant.value *)}{(* constant.unit *)}
+                                \SI[(@ if 'siextra' in constant @)(* constant.siextra *)(@ endif @)]{(* constant.value *)}{(* constant.unit *)}
                             (@ else @)
                                 \textbf{\textcolor{red}{no value or unit defined}}
                             (@ endif @) \\
