--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -23,6 +23,7 @@
     text-micro                  = μ,
 }
 
+\DeclareSIUnit{\permille}{\text{\textperthousand}}
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
 \DeclareSIUnit{\au}{au}
