Added paragraph formatting, en+cs siunitx overrides

--- a/core/i18n/cs/override.tex
+++ b/core/i18n/cs/override.tex
@@ -1,4 +1,5 @@
 \sisetup{
-    output-decimal-marker   = {\text{,}},
-    list-final-separator    = {\ a\ },
+    output-decimal-marker   = {,},
+    list-final-separator    = {\text{ a }},
+    list-pair-separator     = {\text{ a }},
 }
