--- a/core/i18n/en/override.tex
+++ b/core/i18n/en/override.tex
@@ -1,4 +1,5 @@
 \sisetup{
     output-decimal-marker   = {\text{.}},
-    list-final-separator    = {\ and\ },
+    list-final-separator    = {\text{ and }},
+    list-pair-separator     = {\text{ and }},
 }
