Monkeypatching scholar module

--- a/modules/scholar/templates/handout-solutions.tex
+++ b/modules/scholar/templates/handout-solutions.tex
@@ -2,5 +2,6 @@
 
 (@ block solution @)
     \paragraph{Riešenie}
-    \protectedInput{\activeDirectory/(* problem.id *)/solution.tex}
+    \setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* year.id *)/(* self.typedir() *)/(* issue.id *)/(* problem.id *)}%
+    \protectedInput{\activeDirectory/solution.tex}
 (@ endblock solution @)
