Minor fix in siunitx

--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -24,8 +24,16 @@
 }
 
 \DeclareSIUnit{\permille}{\text{\textperthousand}}
+\DeclareSIUnit{\ppm}{ppm}
+\DeclareSIUnit{\ppb}{ppb}
+
 \DeclareSIUnit{\gforce}{g}
 \DeclareSIUnit{\year}{y}
+
+\DeclareSIUnit{\inch}{in}
+\DeclareSIUnit{\foot}{ft}
+\DeclareSIUnit{\mile}{mi}
+
 \DeclareSIUnit{\au}{au}
 \DeclareSIUnit{\byte}{B}
 \DeclareSIUnit{\litre}{l}
@@ -38,8 +46,6 @@
 \DeclareSIUnit{\solarmass}{\ensuremath{\mathrm{M}_\Sun}}
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
-\DeclareSIUnit{\atomicmass}{u}
 \DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\atmosphere}{atm}
-\DeclareSIUnit{\ppm}{ppm}
-\DeclareSIUnit{\ppb}{ppb}
+\DeclareSIUnit{\atomicmass}{u}
