--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -37,7 +37,10 @@
             \subsection{%
                 \texorpdfstring{%
                     \large \textbf{(* problem.title *)} \hfill \normalsize%
-                    (@ block heading_inner scoped @)(@ endblock heading_inner @)}{(* round.number *).(* problem.number *) (* problem.title *)}%
+                    (@ block heading_inner scoped @)(@ endblock heading_inner @)%
+                }{%
+                    (* round.number *).(* problem.number *) (* problem.title *)%
+                }%
             }%
             \label{sec:(* volume.id *)(* semester.id *)(* round.id *)(* problem.id *)-(* kind *)}
         }%
