Converting to new TeX

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -1,12 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Operators %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input{core/tex/math/utilities.tex}
-
 \input{core/tex/math/diff.tex}
 \input{core/tex/math/integrals.tex}
 \input{core/tex/math/vector.tex}
-\input{core/tex/math/matrix.tex}
 
+\def\omicron{o}
 \DeclareMathOperator{\atantwo}{atan2}
 
 % Logical operators
@@ -103,7 +102,5 @@
 \NewDocumentCommand{\kth}{m}{\ensuremath{#1^{\text{th}}}}
 
 \NewDocumentCommand{\Expected}{m}{\ExpectedE{#1}}
-
-\input{core/tex/math/patch.tex}
 
 \makeatother
