--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -44,6 +44,6 @@
 
 \DeclareFontFamily{U}{skulls}{}
 \DeclareFontShape{U}{skulls}{m}{n}{ <-> skull }{}
-\newcommand{\skull}{\text{\usefont{U}{skulls}{m}{n}\symbol{'101}}}
+\NewDocumentCommand{\skull}{}{\text{\usefont{U}{skulls}{m}{n}\symbol{'101}}}
 
 \setminted{fontsize=\footnotesize}
