--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -44,3 +44,5 @@
 \DeclareSIUnit{\lightyear}{ly}
 \DeclareSIUnit{\atmosphere}{atm}
 \DeclareSIUnit{\atomicmass}{u}
+
+\AtBeginDocument{\RenewCommandCopy\qty\SI}
