--- a/core/tex/math/include.tex
+++ b/core/tex/math/include.tex
@@ -86,7 +86,9 @@
 \NewDocumentCommand{\Ceil}{m}{\left\lceil#1\right\rceil}
 
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
-\NewDocumentCommand{\Exp}{m}{e^{#1}}
+\NewDocumentCommand{\ExpUpper}{m}{\exp #1}
+\NewDocumentCommand{\ExpText}{m}{e^{#1}}
+\NewDocumentCommand{\Exp}{m}{\ExpText{#1}}
 \NewDocumentCommand{\LogTen}{}{\log_{10}}
 \NewDocumentCommand{\Must}{m}{\stackrel{!}{#1}}
 \NewDocumentCommand{\MustEqual}{}{\Must{=}}
