--- a/modules/naboj/templates/answers-modulo.tex
+++ b/modules/naboj/templates/answers-modulo.tex
@@ -1,4 +1,4 @@
-(@ extends 'base-languages.tex' @)
+(@ extends 'base-booklet.tex' @)
 
 (@ block content @)
     \thispagestyle{first}
@@ -6,11 +6,11 @@
 
     \vspace*{19mm}
 
-    \section{(* i18n.section.answers *)}
+    \section{(* i18n[language.id].section.answers *)}
     \pagestyle{answers}
-    (@ for modulo in volume.problems_modulo @)
+    (@ for modulo in venue.problems_modulo @)
         \newpage%
-        \section{(* i18n.section.modulo *) (* loop.index0 *)}
+        \section{(* i18n[language.id].section.modulo *) (* loop.index0 *)}
         (@ for problem in modulo @)%
             \setcounter{volume}{(* volume.number *)}%
             \setcounter{problem}{(* problem.number *)}%
