--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -1,8 +1,40 @@
-(@ extends 'base-languages.tex' @)
+(@ extends 'base-booklet.tex' @)
 
 (@ block content @)
+    \fancypagestyle{first}{%
+        \fancyhf{}
+        \fancyhead[L]{
+            \begin{minipage}{0.15\textwidth}
+                \flushleft
+                \includegraphics[height=20mm]{assets/logo/trojsten/large.pdf}\\[0pt]
+                \vspace{16pt}
+            \end{minipage}
+        }
+        \fancyhead[C]{
+            \begin{minipage}{0.7\textwidth}
+                \centering
+                \vspace{4pt}
+                {\Large (* volume.number *). (* i18n[language.id].competition.name.nominative *)}\\[4pt]
+                {\large (* volume.date.strftime('%d. %m. %Y') *)}\\[8pt]
+                {\footnotesize (* competition.organisation.name *), (* competition.organisation.address *)}\\[2pt]
+                \vspace{6pt}
+            \end{minipage}
+        }
+        \fancyhead[R]{
+            \begin{minipage}{0.2\textwidth}
+                \flushright
+                \includegraphics[width=30mm, keepaspectratio=true]{build/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}\\[0pt]
+                \vspace{4pt}
+            \end{minipage}
+        }
+        \fancyfoot[LO,RE]{\href{mailto:(* i18n[language.id].competition.email *)}{\texttt{(* i18n[language.id].competition.email *)}}}
+        \fancyfoot[C]{\small \thepage}
+        \fancyfoot[LE,RO]{\URL{(* i18n[language.id].competition.website *)}}
+        \titleformat{\subsection}[hang]{\bfseries}{}{0pt}{}[]
+    }
+
     \setcounter{volume}{(* volume.number *)}%
-    \pagestyle{main}
+    \pagestyle{naboj}
     \loadgeometry{main}
 
     (@ if language.booklet.contents.intro @)
@@ -14,7 +46,7 @@
     (@ endif @)
 
     (@ if language.booklet.contents.problems @)
-        \section{(* i18n.section.problems *)}
+        \section{(* i18n[language.id].section.problems *)}
         \pagestyle{problems}
         (@ for problem in volume.problems @)%
             \setcounter{problem}{(* problem.number *)}%
@@ -35,7 +67,7 @@
     (@ endif @)
 
     (@ if language.booklet.contents.solutions @)
-        \section{(* i18n.section.solutions *)}
+        \section{(* i18n[language.id].section.solutions *)}
         \pagestyle{solutions}
         (@ for problem in volume.problems @)%
             \setcounter{problem}{(* problem.number *)}%
@@ -59,7 +91,7 @@
     (@ endif @)
 
     (@ if language.booklet.contents.answers @)
-        \section{(* i18n.section.answers *)}
+        \section{(* i18n[language.id].section.answers *)}
         \pagestyle{answers}
         (@ for problem in volume.problems @)%
             \setcounter{problem}{(* problem.number *)}%
