--- a/modules/naboj/templates/constants.tex
+++ b/modules/naboj/templates/constants.tex
@@ -1,24 +1,29 @@
-(@ extends 'base-languages.tex' @)
+(@ extends 'base-booklet.tex' @)
 
 (@ block content @)
+    \fancypagestyle{constants}{%
+        \pagestyle{naboj}
+        \fancyhead[LE,RO]{\textit{(* i18n[language.id].constants.title *)}}
+    }
     \pagestyle{constants}
+
     \renewcommand{\arraystretch}{1.3}
-    \section{(* i18n.constants.title *)}
-    \emph{(* i18n.constants.instruction *)}
+    \section{(* i18n[language.id].constants.title *)}
+    \emph{(* i18n[language.id].constants.instruction *)}
     \vspace*{10mm}
 
     \begin{figure}[H]
         \centering
         \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} l c r}
             \toprule
-                (* i18n.constants.constant *) & (* i18n.constants.symbol *) & (* i18n.constants.value *) \\
+                (* i18n[language.id].constants.constant *) & (* i18n[language.id].constants.symbol *) & (* i18n[language.id].constants.value *) \\
             \midrule
             (@ for field in volume.constants.values() @)
                 (@ for id in field @)
                     (@ with constant = competition.constants.get(id) @)
                         (@ if constant is not none @)
-                            (@ if id in i18n.physics_constants @)
-                                (* i18n.physics_constants.get(id) *)
+                            (@ if id in i18n[language.id].physics_constants @)
+                                (* i18n[language.id].physics_constants.get(id) *)
                             (@ else @)
                                 \bf \textcolor{red}{No translation provided for <}\verb|(* id *)|\textcolor{red}{>}
                             (@ endif @) &
