--- a/modules/naboj/templates/instructions.tex
+++ b/modules/naboj/templates/instructions.tex
@@ -8,5 +8,5 @@
     \pagestyle{instructions}
 
     \section{(* i18n[language.id].instructions.title *)}
-    \input{build/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-inner.tex}
+    \input{build/(* module.id *)/(* competition.id *)/(* volume.id *)/venues/(* venue.id *)/instructions-inner.tex}
 (@ endblock @)
