--- a/modules/naboj/templates/base-booklet.tex
+++ b/modules/naboj/templates/base-booklet.tex
@@ -47,6 +47,38 @@
         \titlespacing*{\paragraph}{0pt}{8pt}{-1em}
     }
 
+    \fancypagestyle{first}{%
+        \fancyhf{}
+        \fancyhead[L]{
+            \begin{minipage}{0.15\textwidth}
+                \flushleft
+                \includegraphics[height=20mm]{assets/logo/trojsten/large.pdf}\\[0pt]
+                \vspace{16pt}
+            \end{minipage}
+        }
+        \fancyhead[C]{
+            \begin{minipage}{0.7\textwidth}
+                \centering
+                \vspace{4pt}
+                {\Large (* volume.number *). (* i18n[language.id].competition.name.nominative *)}\\[4pt]
+                {\large (* volume.date.strftime('%d. %m. %Y') *)}\\[8pt]
+                {\footnotesize (* competition.organisation.name *), (* competition.organisation.address *)}\\[2pt]
+                \vspace{6pt}
+            \end{minipage}
+        }
+        \fancyhead[R]{
+            \begin{minipage}{0.2\textwidth}
+                \flushright
+                \includegraphics[width=30mm, keepaspectratio=true]{build/(* module.id *)/(* competition.id *)/.static/logo/logo.pdf}\\[0pt]
+                \vspace{4pt}
+            \end{minipage}
+        }
+        \fancyfoot[LO,RE]{\href{mailto:(* i18n[language.id].competition.email *)}{\texttt{(* i18n[language.id].competition.email *)}}}
+        \fancyfoot[C]{\small \thepage}
+        \fancyfoot[LE,RO]{\URL{(* i18n[language.id].competition.website *)}}
+        \titleformat{\subsection}[hang]{\bfseries}{}{0pt}{}[]
+    }
+
     \fancypagestyle{problems}{%
         \pagestyle{naboj}
         \fancyhead[LE,RO]{\textit{(* i18n[language.id].section.problems *)}}
