Updated to new meta format from web

--- a/modules/naboj/templates/envelopes.tex
+++ b/modules/naboj/templates/envelopes.tex
@@ -13,13 +13,13 @@
         \vspace*{5mm}
 
         \fontsize{60}{0}\selectfont%
-        (* team.id[:4] *)%
+        (* team.code[:4] *)%
         \fontsize{80}{0}\selectfont%
-        (* team.id[4:] *)%
+        (* team.code[4:] *)%
 
         \vspace{5mm}
         \fontsize{15}{0}\selectfont
-        (* team.name *)
+        (* team.display_name *)
 
         \vspace{15mm}
         \normalsize
