--- a/modules/naboj/templates/tearoff-problem.tex
+++ b/modules/naboj/templates/tearoff-problem.tex
@@ -13,7 +13,7 @@
     \begin{minipage}[t][(* competition.tearoff.inner *)mm][t]{0.85\linewidth}%
         (@ block main @)
             \vspace{0pt}%
-            \subsection{\texorpdfstring{(* problem.number *)}{(* team.id *) (* problem.number *). (* problem.id *)}}%
+            \subsection{\texorpdfstring{(* problem.number *)}{(* team.code *) (* problem.number *). (* problem.id *)}}%
             \setlength{\parskip}{6pt}
             \protectedInput{\activeDirectory/problem.tex}%
         (@ endblock main @)
@@ -24,10 +24,10 @@
         \rotatebox{90}{%
             \hspace{(* competition.tearoff.team_space *)mm}%
             \textsf{%
-                \fontsize{18}{0}\selectfont (* team.id[:4] *)%
-                \textbf{\fontsize{28}{0}\selectfont (* team.id[4:] *)}%
+                \fontsize{18}{0}\selectfont (* team.code[:4] *)%
+                \textbf{\fontsize{28}{0}\selectfont (* team.code[4:] *)}%
                 \fontsize{18}{0}\selectfont(@ block probnum2 @)(* '%02d'|format(problem.number) *)(@ endblock probnum2 @)%
-                \fontsize{18}{0}\selectfont(@ block checkdigit @)(* '%01d'|format(checkdigit(team.id, problem.number)) *)(@ endblock checkdigit @)%
+                \fontsize{18}{0}\selectfont(@ block checkdigit @)(* '%01d'|format(checkdigit(team.code, problem.number)) *)(@ endblock checkdigit @)%
             }%
         }%
         \hspace{2pt}
@@ -43,6 +43,6 @@
         }%
     \end{minipage}
 
-    {\small (* i18n.get(team.language).tearoff.team *) \textbf{(* team.id *)}: (* team.name *)}
+    {\small (* i18n.get(team.language).tearoff.team *) \textbf{(* team.code *)}: (* team.display_name *)}
 \end{minipage}%
 
