Added version info to Náboj

--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -77,4 +77,11 @@
             \protectedInput{\activeDirectory/answer.tex}%
         (@ endfor @)
     (@ endif @)
+
+    \vfill
+    {
+        \tiny
+        \color{lightgray}
+        \hfill built with DeGeŠ at (* timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from \textcolor{gray}{(* hash *)}%
+    }
 (@ endblock @)
