Changed colour of version info to white

--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -81,7 +81,7 @@
     \vfill
     {
         \tiny
-        \color{lightgray}
-        \hfill built with DeGeŠ at (* timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from \textcolor{gray}{(* hash *)}%
+        \color{white}
+        \hfill built with DeGeŠ at (* timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from (* hash *)%
     }
 (@ endblock @)
