Updated venue context and schema

--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -80,8 +80,7 @@
 
     \vfill
     {
-        \tiny
         \color{white}
-        \hfill built with DeGeŠ at (* timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from (* hash *)%
+        \hfill built by (* build.user *) with dgs at (* build.timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from commit (* build.hash *)%
     }
 (@ endblock @)
