--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -81,6 +81,8 @@
     \vfill
     {
         \color{white}
-        \hfill built by (* build.user *) with dgs at (* build.timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from commit (* build.hash *)%
+        \hfill built by (* build.user *) with dgs \texttt{(* build.dgs.branch *): (* build.dgs.hash *)}
+
+        \hfill at (* build.timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from branch \texttt{(* build.repo.branch *): (* build.repo.hash *)}%
     }
 (@ endblock @)
