Improved naboj templates: added school name and bold in_school_symbol

--- a/core/i18n/en/override.tex
+++ b/core/i18n/en/override.tex
@@ -1,5 +1,5 @@
 \sisetup{
-    output-decimal-marker   = {\text{.}},
+    output-decimal-marker   = {.},
     list-final-separator    = {\text{ and }},
     list-pair-separator     = {\text{ and }},
 }
