--- a/core/i18n/es/override.tex
+++ b/core/i18n/es/override.tex
@@ -1,5 +1,5 @@
 \sisetup{
     output-decimal-marker   = {,},
-    list-final-separator    = {\ y\ },
-    list-pair-separator     = {\ y\ },
+    list-final-separator    = {\text{ y }},
+    list-pair-separator     = {\text{ y }},
 }
