--- a/core/i18n/fa/override.tex
+++ b/core/i18n/fa/override.tex
@@ -1,4 +1,5 @@
 \sisetup{
-    output-decimal-marker   = {\text{.}},
-    list-final-separator    = {\ and\ },
+    output-decimal-marker   = {.},
+    list-final-separator    = {\text{ and }},
+    list-paid-separator     = {\text{ and }},
 }
