--- a/core/i18n/hu/override.tex
+++ b/core/i18n/hu/override.tex
@@ -1,4 +1,5 @@
 \sisetup{
     output-decimal-marker   = {\text{,}},
-    list-final-separator    = {\ és\ },
+    list-final-separator    = {\text{ és }},
+    list-pair-separator     = {\text{ és }},
 }
