--- a/core/i18n/pl/override.tex
+++ b/core/i18n/pl/override.tex
@@ -1,4 +1,5 @@
 \sisetup{
     output-decimal-marker   = {\text{,}},
-    list-final-separator    = {\ i\ },
+    list-final-separator    = {\text{ i }},
+    list-pair-separator     = {\text{ i }},
 }
