--- a/core/i18n/ru/override.tex
+++ b/core/i18n/ru/override.tex
@@ -1,7 +1,7 @@
 \sisetup{
     output-decimal-marker   = {\text{,}},
-    list-final-separator    = {\ и\ },
-    list-pair-separator     = {\ и\ },
+    list-final-separator    = {\text{ и }},
+    list-pair-separator     = {\text{ и }},
 }
 
 \DeclareSIUnit\metre{\text{м}}
