Added diagnostic footer template, microfixes to templates and naboj/module.mk

--- a/modules/naboj/templates/answers.tex
+++ b/modules/naboj/templates/answers.tex
@@ -10,4 +10,5 @@
         \subsection{(* problem.number *)}%
         \protectedInput{\activeDirectory/answer.tex}%
     (@ endfor @)
+    (@ include 'footer.tex' @)
 (@ endblock @)
