--- a/modules/naboj/templates/answers-modulo.tex
+++ b/modules/naboj/templates/answers-modulo.tex
@@ -19,4 +19,5 @@
             \protectedInput{\activeDirectory/answer.tex}%
         (@ endfor @)
     (@ endfor @)
+    (@ include 'footer.tex' @)
 (@ endblock @)
