Removed number from footer of single-page documents

--- a/modules/naboj/templates/constants.tex
+++ b/modules/naboj/templates/constants.tex
@@ -4,6 +4,7 @@
     \fancypagestyle{constants}{%
         \pagestyle{naboj}
         \fancyhead[LE,RO]{\textit{(* i18n[language.id].constants.title *)}}
+        \fancyfoot[C]{}
     }
     \pagestyle{constants}
 
