--- a/modules/naboj/templates/instructions.tex
+++ b/modules/naboj/templates/instructions.tex
@@ -4,6 +4,7 @@
     \fancypagestyle{instructions}{%
         \pagestyle{naboj}
         \fancyhead[LE,RO]{\textit{(* i18n[language.id].instructions.title *)}}
+        \fancyfoot[C]{}
     }
     \pagestyle{instructions}
 
