Improving instructions for evaluators

--- a/modules/naboj/templates/answers-modulo.tex
+++ b/modules/naboj/templates/answers-modulo.tex
@@ -6,7 +6,10 @@
 
     \vspace*{19mm}
 
-    \section{(* i18n[language.id].section.answers *)}
+    \section{(* i18n[language.id].section.evaluators *)}
+
+    \protectedInput{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/evaluators.tex}
+
     \pagestyle{answers}
     (@ for modulo in venue.problems_modulo @)
         \newpage%
