--- a/modules/naboj/templates/footer.tex
+++ b/modules/naboj/templates/footer.tex
@@ -1,8 +1,11 @@
     \vfill
     {
-        \color{white}
-        \hfill built by (* build.user *) with dgs \texttt{(* build.dgs.branch *): (* build.dgs.hash *)}
-
-        \hfill at (* build.timestamp.strftime('%Y-%m-%d %H:%M:%S') *) from branch \texttt{(* build.repo.branch *): (* build.repo.hash *)}%
+        \tiny
+        \color{darkgray}
+        \hfill
+        Typeset by \textbf{(* build.user *)} using $\mathrm{D^{\!E}\!G\!_{\displaystyle E}\!\text{Š}}$
+        \texttt{(* build.dgs.branch *): (* build.dgs.hash *)}
+        at (* build.timestamp.strftime('%Y-%m-%d %H:%M:%S') *)
+        from branch \texttt{(* build.repo.branch *): (* build.repo.hash *)}%
     }
 
