--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -10,7 +10,7 @@
     \IfFileExists{#1}{%
         \input{#1}%
     }{%
-        \errorMessage{MISSING FILE \texttt{#1}!}\\
+        \errorMessage{Missing file \texttt{#1}!}\\
     }%
 }
 
