Massive overhaul of Makefile, answers and contexts

--- a/core/i18n/ru/crossref.yaml
+++ b/core/i18n/ru/crossref.yaml
@@ -1,5 +1,5 @@
-figureTitle: "Obrázok"
-tableTitle: "Tabuľka"
-figPrefix: "Obrázok"
-eqnPrefix: "Rovnica"
-tblPrefix: "Tabuľka"
+figureTitle: "Картинка"
+tableTitle: "Таблица"
+figPrefix: "Картинка"
+eqnPrefix: "???"
+tblPrefix: "Таблица"
