--- a/core/tex/utilities.tex
+++ b/core/tex/utilities.tex
@@ -31,7 +31,7 @@
     \IfFileExists{\activeDirectory/#2}{%
         \includegraphics[#1]{\activeDirectory/#2}%
     }{%
-        \includegraphics[#1]{example-image-a}%
+        \includegraphics[#1]{example-image}%
     }%
 }
 
