--- a/core/i18n/hu/crossref.yaml
+++ b/core/i18n/hu/crossref.yaml
@@ -1,5 +1,5 @@
-figureTitle: "Obrázok"
-tableTitle: "Tabuľka"
-figPrefix: "Obrázok"
-eqnPrefix: "Rovnica"
-tblPrefix: "Tabuľka"
+figureTitle: "Ábra"
+tableTitle: "Táblázat"
+figPrefix: "Ábra"
+eqnPrefix: "???"
+tblPrefix: "Táblázat"
