--- a/core/i18n/pl/crossref.yaml
+++ b/core/i18n/pl/crossref.yaml
@@ -1,5 +1,5 @@
-figureTitle: "Obrázok"
-tableTitle: "Tabuľka"
-figPrefix: "Obrázok"
-eqnPrefix: "Rovnica"
-tblPrefix: "Tabuľka"
+figureTitle: "Figura"
+tableTitle: "Tabela"
+figPrefix: "Figura"
+eqnPrefix: "???"
+tblPrefix: "Tabela"
