Wildcard module.mk for naboj

--- a/modules/naboj/static/i18n/cs.yaml
+++ b/modules/naboj/static/i18n/cs.yaml
@@ -21,7 +21,8 @@ constants:
     symbol:                     "značka"
     value:                      "hodnota"
 answers:
-    interval:                   "Uznejte řešení v intervalu"
+    interval:                   "uznejte řešení v intervalu"
+    also:                       "uznejte taky"
 instructions:
     title:                      "Pokyny"
 instructions_online:
