--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -18,6 +18,9 @@
     retain-explicit-plus        = true,
 }
 
+\catcode`\%=12\relax
+\DeclareSIUnit[number-unit-product = ]\percent{%}
+\catcode`\%=14\relax
 \DeclareSIUnit{\permille}{\text{\textperthousand}}
 \DeclareSIUnit{\ppm}{ppm}
 \DeclareSIUnit{\ppb}{ppb}
